# uranium_grpc_codegen

./: Cargo.toml  README.md  build.rs
proto/: authentication.proto  health_check.proto  user_profile.proto
src/: lib.rs
src/client/: authentication.rs  health_check.rs  user_profile.rs
src/server/: authentication.rs  health_check.rs  user_profile.rs
