[package]
name = "uranium_grpc_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
ts-rs = "10.0.0"

[build-dependencies]
tonic-build = "0.12.3"

[features]
default = ["client"]
client = []
server = []
